# mcp-image-recognition

./: .env.example  .mcp.json  AGENTS.md  README.md  deepseek开眼.md  pyproject.toml
.claude/skills/git-commit-message/: SKILL.md
.codex/: config.toml
src/image_recognition_server/: server.py
src/image_recognition_server/vision/: anthropic.py
src/mcp_vision_recognition/: __init__.py  server.py
src/mcp_vision_recognition/utils/: config.py
src/mcp_vision_recognition/vision/: anthropic.py  openai.py
tests/: test_ocr.py  test_server.py  test_vision_config.py
