[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-vision-recognition"
version = "0.1.2"
description = "MCP server for image recognition using Anthropic and OpenAI vision APIs"
authors = [{ name = "Mario" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "mcp>=1.2.0",
    "anthropic>=0.8.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "Pillow>=10.0.0",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "pytesseract>=0.3.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
mcp-vision-recognition = "mcp_vision_recognition.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_vision_recognition"]

[tool.hatch.build.targets.sdist]
include = ["src", "tests", "README.md", "LICENSE"]
